--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <input type="text" id="address" placeholder="Enter Address">
             <button id="searchBtn">Search</button>
             <div id="loadingBar"></div>
-            <iframe id="map" width="100%" height="300px" style="border:0" loading="lazy" allowfullscreen referrerpolicy="no-referrer-when-downgrade" src="https://www.google.com/maps/embed/v1/view?key=YOUR_API_KEY&center=0,0&zoom=2"></iframe>
+            <iframe id="map" width="100%" height="300px" style="border:0" loading="lazy" allowfullscreen referrerpolicy="no-referrer-when-downgrade" src="https://www.google.com/maps/embed/v1/view?key=AIzaSyDot98cx3Hx197MvTvvBaShWMmza-d9A4k&center=0,0&zoom=2"></iframe>
         </div>
         <div class="notes-section">
             <h2>Notes</h2>
