--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <input type="text" id="address" placeholder="Enter Address">
             <button id="searchBtn">Search</button>
             <div id="loadingBar"></div>
-            <iframe id="map" width="100%" height="300px" style="border:0" loading="lazy" allowfullscreen referrerpolicy="no-referrer-when-downgrade" src="https://www.google.com/maps/embed/v1/view?key=AIzaSyDot98cx3Hx197MvTvvBaShWMmza-d9A4k&center=0,0&zoom=2"></iframe>
+            <iframe id="map" width="100%" height="300px" style="border:0" loading="lazy" allowfullscreen referrerpolicy="no-referrer-when-downgrade" src="https://www.google.com/maps/embed/v1/view?key=AIzaSyDot98cx3Hx197MvTvvBaShWMmza-d9A4k&center=52.4862,-1.8904&zoom=12"></iframe>
         </div>
         <div class="notes-section">
             <h2>Notes</h2>
@@ -27,9 +27,9 @@
         </div>
         <div class="units-section">
             <h2>Send Units</h2>
-            <label><input type="checkbox" id="fireUnit"> Fire</label>
-            <label><input type="checkbox" id="policeUnit"> Police</label>
-            <label><input type="checkbox" id="ambulanceUnit"> Ambulance</label>
+            <label class="checkbox"><input type="checkbox" id="fireUnit"> Fire</label>
+            <label class="checkbox"><input type="checkbox" id="policeUnit"> Police</label>
+            <label class="checkbox"><input type="checkbox" id="ambulanceUnit"> Ambulance</label>
             <button id="sendUnitsBtn">Send Units</button>
         </div>
     </div>
