--- a/index.html
+++ b/index.html
@@ -14,23 +14,42 @@
         <p id="error" class="error"></p>
     </div>
     <div class="container" id="mainContent" style="display:none;">
-        <h1>999 Operator Game</h1>
-        <div class="map-section">
-            <input type="text" id="address" placeholder="Enter Address">
-            <button id="searchBtn">Search</button>
-            <div id="loadingBar"></div>
-            <iframe id="map" width="100%" height="300px" style="border:0" loading="lazy" allowfullscreen referrerpolicy="no-referrer-when-downgrade" src="https://www.google.com/maps/embed/v1/view?key=AIzaSyDot98cx3Hx197MvTvvBaShWMmza-d9A4k&center=52.4862,-1.8904&zoom=12"></iframe>
+        <div class="header">
+            <button id="homeBtn">Home</button>
+            <button id="dispatchBtn">Dispatch</button>
         </div>
-        <div class="notes-section">
-            <h2>Notes</h2>
-            <textarea id="notes" placeholder="Enter notes here..."></textarea>
+        <div class="quick-call-section">
+            <h2>Quick Call</h2>
+            <input type="text" id="location" placeholder="Enter Location">
+            <select id="callType">
+                <option value="Police">Police</option>
+                <option value="Ambulance">Ambulance</option>
+                <option value="Fire">Fire</option>
+            </select>
+            <button id="submitCallBtn">Submit</button>
         </div>
-        <div class="units-section">
-            <h2>Send Units</h2>
-            <label class="checkbox"><input type="checkbox" id="fireUnit"> Fire</label>
-            <label class="checkbox"><input type="checkbox" id="policeUnit"> Police</label>
-            <label class="checkbox"><input type="checkbox" id="ambulanceUnit"> Ambulance</label>
-            <button id="sendUnitsBtn">Send Units</button>
+        <div class="active-calls-section">
+            <h2>Active Calls</h2>
+            <table id="activeCallsTable">
+                <thead>
+                    <tr>
+                        <th>Call ID</th>
+                        <th>Units</th>
+                        <th>Type</th>
+                        <th>Location</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- Active calls will be dynamically added here -->
+                </tbody>
+            </table>
+        </div>
+        <div class="call-details-section" style="display:none;">
+            <h2>Call Details</h2>
+            <div id="callMap" style="width:100%; height:300px;"></div>
+            <h3>Notes</h3>
+            <textarea id="callNotes" placeholder="Enter notes here..."></textarea>
+            <button id="saveNotesBtn">Save Notes</button>
         </div>
     </div>
     <script src="script.js"></script>
