--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div class="header">
             <button id="homeBtn">Home</button>
             <button id="dispatchBtn">Dispatch</button>
+            <button id="createCallBtn">+ Create Call</button>
         </div>
         <div class="quick-call-section">
             <h2>Quick Call</h2>
@@ -37,6 +38,7 @@
                         <th>Units</th>
                         <th>Type</th>
                         <th>Location</th>
+                        <th>Actions</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -47,10 +49,37 @@
         <div class="call-details-section" style="display:none;">
             <h2>Call Details</h2>
             <div id="callMap" style="width:100%; height:300px;"></div>
+            <h3>Units</h3>
+            <select id="editCallType">
+                <option value="Police">Police</option>
+                <option value="Ambulance">Ambulance</option>
+                <option value="Fire">Fire</option>
+            </select>
             <h3>Notes</h3>
             <textarea id="callNotes" placeholder="Enter notes here..."></textarea>
             <button id="saveNotesBtn">Save Notes</button>
         </div>
+    </div>
+    <div id="popup" class="popup" style="display:none;">
+        <span id="popupText"></span>
+        <button id="popupCloseBtn">Close</button>
+    </div>
+    <div id="dispatchContent" class="dispatch-content" style="display:none;">
+        <h2>Dispatch Agents</h2>
+        <div id="agentsList">
+            <!-- Agents list will be dynamically added here -->
+        </div>
+    </div>
+    <div id="createCallScreen" class="create-call-screen" style="display:none;">
+        <h2>Create Call</h2>
+        <input type="text" id="createLocation" placeholder="Enter Location">
+        <select id="createCallType">
+            <option value="Police">Police</option>
+            <option value="Ambulance">Ambulance</option>
+            <option value="Fire">Fire</option>
+        </select>
+        <div id="createCallMap" style="width:100%; height:300px;"></div>
+        <button id="createCallSubmitBtn">Create Call</button>
     </div>
     <script src="script.js"></script>
 </body>
