--- a/index.html
+++ b/index.html
@@ -8,85 +8,61 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDot98cx3Hx197MvTvvBaShWMmza-d9A4k"></script>
 </head>
 <body>
-    <div class="password-container" id="passwordContainer">
-        <h1>Enter Password</h1>
+    <div id="loginContainer">
+        <h1>Operator Login</h1>
+        <input type="text" id="userId" placeholder="User ID">
         <input type="password" id="password" placeholder="Password">
-        <button id="passwordBtn">Enter</button>
-        <p id="error" class="error"></p>
+        <button id="loginBtn">Login</button>
+        <p id="loginError"></p>
     </div>
-    <div class="container" id="mainContent" style="display:none;">
-        <div class="header">
+    <div id="mainContainer" style="display: none;">
+        <header>
             <button id="homeBtn">Home</button>
             <button id="dispatchBtn">Dispatch</button>
-            <button id="createCallBtn">+ Create Call</button>
-        </div>
-        <div class="quick-call-section">
-            <h2>Quick Call</h2>
-            <input type="text" id="location" placeholder="Enter Location">
+            <button id="createCallBtn" style="float: right;">Create Call</button>
+            <button id="logoutBtn" style="float: right;">Logout</button>
+        </header>
+        <main id="homeContent">
+            <h1>Quick Call</h1>
+            <input type="text" id="location" placeholder="Enter Address">
             <select id="callType">
                 <option value="Police">Police</option>
                 <option value="Ambulance">Ambulance</option>
                 <option value="Fire">Fire</option>
             </select>
             <button id="submitCallBtn">Submit</button>
-        </div>
-        <div class="active-calls-section">
-            <h2>Active Calls</h2>
             <table id="activeCallsTable">
                 <thead>
                     <tr>
                         <th>Call ID</th>
-                        <th>Units</th>
                         <th>Type</th>
                         <th>Location</th>
                         <th>Actions</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <!-- Active calls will be dynamically added here -->
-                </tbody>
+                <tbody></tbody>
             </table>
+        </main>
+        <main id="dispatchContent" style="display: none;">
+            <h1>Dispatch</h1>
+            <div id="agentsList"></div>
+        </main>
+        <div id="callDetailsSection" style="display: none;">
+            <div id="locationTracing" style="display: none;">Localising caller location...</div>
+            <div id="callMap"></div>
+            <button id="closeCallDetailsBtn">Close</button>
         </div>
-        <div class="call-details-section" style="display:none;">
-            <h2>Call Details</h2>
-            <div id="callMap" style="width:100%; height:300px;"></div>
-            <div id="locationTracing" style="display:none;">
-                <p>Tracing caller location...</p>
-                <div class="loading-bar">
-                    <div class="loading-fill"></div>
-                </div>
-            </div>
-            <h3>Units</h3>
-            <select id="editCallType">
+        <div id="createCallSection" style="display: none;">
+            <h1>Create Call</h1>
+            <div id="createCallMap" style="height: 400px;"></div>
+            <input type="text" id="newCallLocation" placeholder="Location">
+            <select id="newCallType">
                 <option value="Police">Police</option>
                 <option value="Ambulance">Ambulance</option>
                 <option value="Fire">Fire</option>
             </select>
-            <h3>Notes</h3>
-            <textarea id="callNotes" placeholder="Enter notes here..."></textarea>
-            <button id="saveNotesBtn">Save Notes</button>
+            <button id="submitNewCallBtn">Submit Call</button>
         </div>
-    </div>
-    <div id="popup" class="popup" style="display:none;">
-        <span id="popupText"></span>
-        <button id="popupCloseBtn">Close</button>
-    </div>
-    <div id="dispatchContent" class="dispatch-content" style="display:none;">
-        <h2>Dispatch Agents</h2>
-        <div id="agentsList">
-            <!-- Agents list will be dynamically added here -->
-        </div>
-    </div>
-    <div id="createCallScreen" class="create-call-screen" style="display:none;">
-        <h2>Create Call</h2>
-        <input type="text" id="createLocation" placeholder="Enter Location">
-        <select id="createCallType">
-            <option value="Police">Police</option>
-            <option value="Ambulance">Ambulance</option>
-            <option value="Fire">Fire</option>
-        </select>
-        <div id="createCallMap" style="width:100%; height:300px;"></div>
-        <button id="createCallSubmitBtn">Create Call</button>
     </div>
     <script src="script.js"></script>
 </body>
