--- a/index.html
+++ b/index.html
@@ -9,60 +9,62 @@
 </head>
 <body>
     <div id="loginContainer">
-        <h1>Operator Login</h1>
+        <h1>Login</h1>
         <input type="text" id="userId" placeholder="User ID">
         <input type="password" id="password" placeholder="Password">
         <button id="loginBtn">Login</button>
         <p id="loginError"></p>
     </div>
-    <div id="mainContainer" style="display: none;">
+
+    <div id="mainContainer" style="display:none;">
         <header>
             <button id="homeBtn">Home</button>
             <button id="dispatchBtn">Dispatch</button>
-            <button id="createCallBtn" style="float: right;">Create Call</button>
-            <button id="logoutBtn" style="float: right;">Logout</button>
+            <button id="createCallBtn">Create Call</button>
+            <button id="logoutBtn">Logout</button>
         </header>
-        <main id="homeContent">
-            <h1>Quick Call</h1>
-            <input type="text" id="location" placeholder="Enter Address">
-            <select id="callType">
-                <option value="Police">Police</option>
-                <option value="Ambulance">Ambulance</option>
-                <option value="Fire">Fire</option>
-            </select>
-            <button id="submitCallBtn">Submit</button>
+        <section id="homeContent">
+            <h2>Active Calls</h2>
             <table id="activeCallsTable">
                 <thead>
                     <tr>
-                        <th>Call ID</th>
+                        <th>ID</th>
                         <th>Type</th>
                         <th>Location</th>
                         <th>Actions</th>
                     </tr>
                 </thead>
-                <tbody></tbody>
+                <tbody>
+                    <!-- Active calls will be appended here -->
+                </tbody>
             </table>
-        </main>
-        <main id="dispatchContent" style="display: none;">
-            <h1>Dispatch</h1>
-            <div id="agentsList"></div>
-        </main>
-        <div id="callDetailsSection" style="display: none;">
-            <div id="locationTracing" style="display: none;">Localising caller location...</div>
-            <div id="callMap"></div>
+            <div id="locationTracing" style="display:none;">Tracing caller location...</div>
+        </section>
+
+        <section id="dispatchContent" style="display:none;">
+            <h2>Dispatch</h2>
+            <div id="agentsList">
+                <!-- Agents will be listed here -->
+            </div>
+        </section>
+
+        <section id="callDetailsSection" style="display:none;">
+            <h2>Call Details</h2>
+            <div id="callMap" style="width: 100%; height: 400px;"></div>
             <button id="closeCallDetailsBtn">Close</button>
-        </div>
-        <div id="createCallSection" style="display: none;">
-            <h1>Create Call</h1>
-            <div id="createCallMap" style="height: 400px;"></div>
-            <input type="text" id="newCallLocation" placeholder="Location">
+        </section>
+
+        <section id="createCallSection" style="display:none;">
+            <h2>Create Call</h2>
+            <input type="text" id="newCallLocation" placeholder="Enter location">
             <select id="newCallType">
                 <option value="Police">Police</option>
                 <option value="Ambulance">Ambulance</option>
                 <option value="Fire">Fire</option>
             </select>
-            <button id="submitNewCallBtn">Submit Call</button>
-        </div>
+            <button id="submitNewCallBtn">Submit</button>
+            <div id="createCallMap" style="width: 100%; height: 400px;"></div>
+        </section>
     </div>
     <script src="script.js"></script>
 </body>
