--- a/index.html
+++ b/index.html
@@ -5,26 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>999 Operator Game</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDot98cx3Hx197MvTvvBaShWMmza-d9A4k"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places"></script>
 </head>
 <body>
     <div id="loginContainer">
-        <h1>Login</h1>
+        <h2>Login</h2>
         <input type="text" id="userId" placeholder="User ID">
         <input type="password" id="password" placeholder="Password">
         <button id="loginBtn">Login</button>
         <p id="loginError"></p>
     </div>
 
-    <div id="mainContainer" style="display:none;">
+    <div id="mainContainer" style="display: none;">
         <header>
             <button id="homeBtn">Home</button>
             <button id="dispatchBtn">Dispatch</button>
-            <button id="createCallBtn">Create Call</button>
             <button id="logoutBtn">Logout</button>
+            <button id="createCallBtn">Create Call</button>
         </header>
         <section id="homeContent">
-            <h2>Active Calls</h2>
+            <h3>Quick Call</h3>
+            <input type="text" id="quickCallLocation" placeholder="Enter location">
+            <button id="quickCallSubmit">Submit</button>
+            <h3>Active Calls</h3>
             <table id="activeCallsTable">
                 <thead>
                     <tr>
@@ -34,38 +37,35 @@
                         <th>Actions</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <!-- Active calls will be appended here -->
-                </tbody>
+                <tbody></tbody>
             </table>
-            <div id="locationTracing" style="display:none;">Tracing caller location...</div>
         </section>
-
-        <section id="dispatchContent" style="display:none;">
-            <h2>Dispatch</h2>
-            <div id="agentsList">
-                <!-- Agents will be listed here -->
-            </div>
+        <section id="dispatchContent" style="display: none;">
+            <h3>Available Agents</h3>
+            <div id="agentsList"></div>
         </section>
-
-        <section id="callDetailsSection" style="display:none;">
-            <h2>Call Details</h2>
-            <div id="callMap" style="width: 100%; height: 400px;"></div>
+        <section id="callDetailsSection" style="display: none;">
+            <h3>Call Details</h3>
+            <div id="callMap" style="width: 100%; height: 300px;"></div>
+            <textarea id="callNotes" placeholder="Enter notes"></textarea>
+            <button id="addNotesBtn">Add Notes</button>
             <button id="closeCallDetailsBtn">Close</button>
         </section>
-
-        <section id="createCallSection" style="display:none;">
-            <h2>Create Call</h2>
+        <section id="createCallSection" style="display: none;">
+            <h3>Create Call</h3>
+            <div id="createCallMap" style="width: 100%; height: 300px;"></div>
             <input type="text" id="newCallLocation" placeholder="Enter location">
+            <button id="findLocationBtn">Find Location</button>
             <select id="newCallType">
                 <option value="Police">Police</option>
                 <option value="Ambulance">Ambulance</option>
                 <option value="Fire">Fire</option>
             </select>
-            <button id="submitNewCallBtn">Submit</button>
-            <div id="createCallMap" style="width: 100%; height: 400px;"></div>
+            <textarea id="newCallNotes" placeholder="Enter notes"></textarea>
+            <button id="submitNewCallBtn">Submit Call</button>
         </section>
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
